--- a/src/stylesheets/helpers/_helpers.scss
+++ b/src/stylesheets/helpers/_helpers.scss
@@ -2,13 +2,14 @@
 /// @group helpers
 ////
 
-@import 'hacks/hacks';
-@import 'hacks/print';
-@import 'helpers-glyphs';
+@import 'hacks/hacks',
+'hacks/print',
+'helpers-glyphs',
+'helpers-bem';
 
 /// Return ems from a pixel value
 /// This assumes a base of `$base-font-size`
-/// @link https://github.com/alphagov/govuk_elements/blob/master/public/sass/elements/_helpers.scss#L12 em function in GOV.UK's elements
+/// @link https://github.com/alphagov/govuk_elements/blob/master/public/sass/elements/_helpers.scss#L4-L8 em function in GOV.UK's elements
 /// @param {Number} $px - The pixel value to convert
 /// @param {Number} $base [$base-font-size] - The base pixel value
 @function em($px, $base: $base-font-size) {
@@ -17,7 +18,7 @@
 
 
 /// Hide, but not for screenreaders
-/// @link https://github.com/alphagov/govuk_elements/blob/master/public/sass/elements/_helpers.scss#L31
+/// @link https://github.com/alphagov/govuk_elements/blob/master/public/sass/elements/_helpers.scss#L24-L35
 .visually-hidden,
 .visuallyhidden {
   border: 0;
