--- a/web/server/views/about/index.njk
+++ b/web/server/views/about/index.njk
@@ -42,49 +42,49 @@
 		<h2>Our aims and principles</h2>
 
 		<ul class="grid">
-			<li class="grid__item one-whole tablet--one-half desktop--one-third wide--one-quarter">
+			<li data-g="12 sm:6 md:4 lg:3">
 				<h3 class="h6">Tested and testable</h3>
 				<p>
 					JavaScript written in a testable way with unit tests. Responsive testing. Set of manual accessibility tests.
 				</p>
 			</li>
-			<li class="grid__item one-whole tablet--one-half desktop--one-third wide--one-quarter">
+			<li data-g="12 sm:6 md:4 lg:3">
 				<h3 class="h6">Tooling doesn’t in the way of the code</h3>
 				<p>
 					It's all about the code so using different IDEs or platforms for dev shouldn't get in the way of building things.
 				</p>
 			</li>
-			<li class="grid__item one-whole tablet--one-half desktop--one-third wide--one-quarter">
+			<li data-g="12 sm:6 md:4 lg:3">
 				<h3 class="h6">Easy to maintain and extend</h3>
 				<p>
 					It should be a living thing that gets improved and extended so it's got to be easy for developers to pick up and work on.
 				</p>
 			</li>
-			<li class="grid__item one-whole tablet--one-half desktop--one-third wide--one-quarter">
+			<li data-g="12 sm:6 md:4 lg:3">
 				<h3 class="h6">Easy to use and consume</h3>
 				<p>
 					It should be easy to integrate the NICE Experience into any application with just a few commands, for example via NPM, Bower, or Meteor's Atmosphere.
 				</p>
 			</li>
-			<li class="grid__item one-whole tablet--one-half desktop--one-third wide--one-quarter">
+			<li data-g="12 sm:6 md:4 lg:3">
 				<h3 class="h6">Accessible</h3>
 				<p>
 					We aim to conform to <a href="https://www.nice.org.uk/accessibility" target="_blank" rel="external">WCAG 2.0 Level AA</a> and follow the <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head" target="_blank" rel="external">4 principles of accessibility</a> of perceivable, operable, understandable, and robust for our content.
 				</p>
 			</li>
-			<li class="grid__item one-whole tablet--one-half desktop--one-third wide--one-quarter">
+			<li data-g="12 sm:6 md:4 lg:3">
 				<h3 class="h6">Modern</h3>
 				<p>
 					But not just modern for the sake of being modern. There are some amazing modern web technologies that we use to try and make great experiences.
 				</p>
 			</li>
-			<li class="grid__item one-whole tablet--one-half desktop--one-third wide--one-quarter">
+			<li data-g="12 sm:6 md:4 lg:3">
 				<h3 class="h6">Modular</h3>
 				<p>
 					You shouldn't be forced to include everything - pick and choose exactly what you need which means lightweight...
 				</p>
 			</li>
-			<li class="grid__item one-whole tablet--one-half desktop--one-third wide--one-quarter">
+			<li data-g="12 sm:6 md:4 lg:3">
 				<h3 class="h6">Lightweight</h3>
 				<p>
 					It's not a monolithic framework with every design pattern NICE have ever used - it's lightweight 'starter for 10' that gives just enough of a framework and as a result is lightweight and quick loading.
@@ -96,7 +96,7 @@
 
 		<div class="grid">
 
-			<div class="grid__item one-whole desktop--one-third">
+			<div data-g="12 md:4">
 				<h3>Developers</h3>
 				<p>
 					Either quickly rapidly prototype using a compiled version, or integrate it into your app and use it as a solid base.
@@ -106,14 +106,14 @@
 				</p>
 			</div>
 
-			<div class="grid__item one-whole desktop--one-third">
+			<div data-g="12 md:4">
 				<h3>Designers</h3>
 				<p>
 					Have a base and set of rules and styles from which to iterate without re-inventing the wheel
 				</p>
 			</div>
 
-			<div class="grid__item one-whole desktop--one-third">
+			<div data-g="12 md:4">
 				<h3>Content editors</h3>
 				<p>
 					A set of guidelines for how components should be used and a set of templates. An up-to-date source of truth to ensure consistency of use across.
