--- a/web/server/views/about/roadmap.njk
+++ b/web/server/views/about/roadmap.njk
@@ -26,7 +26,7 @@
 			<h2 class="heading--separator">Short term</h2>
 
 			<div class="grid">
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Components</h3>
 					<ul>
 						<li><a href="/style-guide/typography"><s>Typography</s></a></li>
@@ -39,7 +39,7 @@
 						<li>Cookie message</li>
 					</ul>
 				</div>
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Content</h3>
 					<ul>
 						<li><a href="/style-guide/colour"><s>Colour documentation</s></a></li>
@@ -48,7 +48,7 @@
 						<li><a href="/sass/docs">SASSDoc generated pages</a></li>
 					</ul>
 				</div>
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Code</h3>
 					<ul>
 						<li><s>SASS Doc generation</s></li>
@@ -58,7 +58,7 @@
 						<li><a href="http://bbc-news.github.io/wraith/" target="_blank" rel="external">Wraith</a> usage</li>
 					</ul>
 				</div>
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Build</h3>
 					<ul>
 						<li><s>Grunt build process</s></li>
@@ -76,7 +76,7 @@
 			<h2 class="heading--separator">Medium term</h2>
 
 			<div class="grid">
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Components</h3>
 					<ul>
 						<li>Button loading states</li>
@@ -89,7 +89,7 @@
 						<li>Responsive embed</li>
 					</ul>
 				</div>
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Content</h3>
 					<ul>
 						<li>Page layout examples/templates</li>
@@ -98,7 +98,7 @@
 						<li><a href="http://documentation.js.org/" target="_blank" rel="external">JS Documentation</a> page generation</li>
 					</ul>
 				</div>
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Code</h3>
 					<ul>
 						<li>Transition/animation guidelines</li>
@@ -107,7 +107,7 @@
 						<li>JS <a href="https://flowtype.org/" target="_blank" rel="external">Flow type annotations</a></li>
 					</ul>
 				</div>
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Build</h3>
 					<ul>
 						<li>NPM Scripts (option to use <a href="https://www.keithcirkel.co.uk/how-to-use-npm-as-a-build-tool/" target="_blank" rel="external">NPM as build tool</a>)</li>
@@ -124,7 +124,7 @@
 			<h2 class="heading--separator">Longer term</h2>
 
 			<div class="grid">
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Components</h3>
 					<ul>
 						<li>Page hero</li>
@@ -133,21 +133,21 @@
 						<li>Pagination</li>
 					</ul>
 				</div>
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Content</h3>
 					<ul>
 						<li>General development principles</li>
 						<li>Wider content style guide e.g. tone of voice, <a href="http://styleguide.mailchimp.com/grammar-and-mechanics/" target="_blank" rel="external">grammar &amp; mechanics</a></li>
 					</ul>
 				</div>
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Code</h3>
 					<ul>
 						<li><a href="https://github.com/mattonfoot/NICE.TopHat" target="_blank" rel="external">TopHat</a> refresh</li>
 						<li>Responsive emails</li>
 					</ul>
 				</div>
-				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
+				<div data-g="12 xs:6 sm:4 md:3">
 					<h3 class="h5">Build</h3>
 					<ul>
 						<li>Live site</li>
