--- a/web/server/views/sass/docs.njk
+++ b/web/server/views/sass/docs.njk
@@ -8,7 +8,7 @@
 	<div class="grid">
 		{# Loop over the groups #}
 		{% for group in groups %}
-			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+			<div data-g="12 xs:6 sm:4 md:3">
 				<h2 class="h4">
 					<a href="/sass/docs/{{ group.id }}">
 						{{ group.name }}
