--- a/web/server/views/sass/includes/annotations/content.njk
+++ b/web/server/views/sass/includes/annotations/content.njk
@@ -1,7 +1,7 @@
 {# Describes the usage of @content Sass directive in the documented mixin #}
 
 {% if 'content'|in(item) %}
-	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+	<div data-g="12 md:6 lg:4">
 		<h5>Content</h5>
 
 		<p>
