--- a/web/server/views/sass/includes/annotations/todo.njk
+++ b/web/server/views/sass/includes/annotations/todo.njk
@@ -1,5 +1,5 @@
 {% if item.todo.length > 0 %}
-	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+	<div data-g="12 md:6 lg:4">
 		<h5>TODO</h5>
 
 		<ul>
