--- a/web/server/views/sass/libraries.njk
+++ b/web/server/views/sass/libraries.njk
@@ -15,7 +15,7 @@
 			<li><a href="#is">Is</a></li>
 			<li><a href="#math">Math</a></li>
 			<li><a href="#scut">Scut</a></li>
-			<li><a href="#grids">Grids</a></li>
+			<li><a href="#media-queries">MQ</a></li>
 		</ul>
 	</nav>
 
@@ -67,15 +67,15 @@
 
 	</section>
 
-	<section id="grids">
-		<h2>Wizardry grids</h2>
+	<section id="scut">
+		<h2>MQ</h2>
 
 		<blockquote class="quote">
-			<p>csswizardry-grids is a fully responsive, mobile-first, infinitely nestable, reversible, reorderable, simple to understand, human-friendly, robust grid system.</p>
+			<p>A Sass mixin that helps you compose media queries in an elegant way.</p>
 		</blockquote>
 
 		<p>
-			<a href="http://csswizardry.com/csswizardry-grids/" class="btn btn--secondary" target="_blank" rel="external">Wizardry Grids</a>
+			<a href="https://github.com/sass-mq/sass-mq" class="btn btn--secondary" target="_blank" rel="external">SASS MQ</a>
 		</p>
 
 	</section>
