--- a/web/server/views/style-guide/buttons.njk
+++ b/web/server/views/style-guide/buttons.njk
@@ -40,14 +40,14 @@
 
 		{% example "html" -%}
 			<div class="grid">
-				<div class="grid__item one-half">
+				<div data-g="6">
 					<p><button type="button" class="btn btn--xs">XS button</button></p>
 					<p><button type="button" class="btn btn--sm">Small button</button></p>
 					<p><button type="button" class="btn">Default button</button></p>
 					<p><button type="button" class="btn btn--lg">Large button</button></p>
 					<p><button type="button" class="btn btn--xl">XL button</button></p>
 				</div>
-				<div class="grid__item one-half">
+				<div data-g="6">
 					<p><button type="button" class="btn btn--secondary btn--xs">XS button</button></p>
 					<p><button type="button" class="btn btn--secondary btn--sm">Small button</button></p>
 					<p><button type="button" class="btn btn--secondary">Default button</button></p>
