--- a/web/server/views/style-guide/iconography.njk
+++ b/web/server/views/style-guide/iconography.njk
@@ -25,7 +25,7 @@
 
 		<div class="grid">
 			{% for glyph in data.glyphs %}
-				<div class="grid__item one-quarter tablet--one-fifth desktop--one-sixth">
+				<div data-g="6 xs:4 md:3 lg:2">
 					<div class="h2">
 						<span class="icon icon--{{ glyph }}"></span>
 					</div>
