--- a/web/server/views/layouts/_sidebar.njk
+++ b/web/server/views/layouts/_sidebar.njk
@@ -6,7 +6,7 @@
 		<div class="grid">
 
 			{# Sidebar #}
-			<aside class="grid__item one-whole tablet--one-third desktop--one-fifth" role="complementary">
+			<aside data-g="12 sm:3 lg:2" role="complementary">
 				{% block sidebar %}
 
 					<nav>
@@ -56,7 +56,7 @@
 			</aside>
 
 			{# Main container #}
-			<article class="grid__item one-whole tablet--two-thirds desktop--four-fifths" role="main">
+			<article data-g="12 sm:9 lg:10" role="main">
 				{% block main %}
 					Default body content
 				{% endblock %}
