--- a/web/server/views/sass/includes/annotations/output.njk
+++ b/web/server/views/sass/includes/annotations/output.njk
@@ -1,5 +1,5 @@
 {% if item.output %}
-	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+	<div data-g="12 md:6 lg:4">
 		<h5>Output</h5>
 		<div class="item__description">{{ item.output|safe }}</div>
 	</div>
