--- a/web/server/views/sass/includes/annotations/return.njk
+++ b/web/server/views/sass/includes/annotations/return.njk
@@ -1,5 +1,5 @@
 {% if item.return %}
-	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+	<div data-g="12 md:6 lg:4">
 		<h5>Returns</h5>
 
 		<p>
