--- a/web/server/views/sass/includes/annotations/see.njk
+++ b/web/server/views/sass/includes/annotations/see.njk
@@ -1,5 +1,5 @@
 {% if item.see.length >= 1 %}
-	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+	<div data-g="12 md:6 lg:4">
 		<h5>See also</h5>
 
 		<ul>
