--- a/web/server/views/sass/includes/annotations/since.njk
+++ b/web/server/views/sass/includes/annotations/since.njk
@@ -1,5 +1,5 @@
 {% if item.since.length > 1 %}
-	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+	<div data-g="12 md:6 lg:4">
 		<h5>Changelog</h5>
 
 		<ul>
