--- a/web/server/views/sass/includes/annotations/throw.njk
+++ b/web/server/views/sass/includes/annotations/throw.njk
@@ -1,5 +1,5 @@
 {% if item.throw.length > 0 %}
-	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+	<div data-g="12 md:6 lg:4">
 		<h5>Throws</h5>
 
 		<ul>
