--- a/web/server/views/sass/index.njk
+++ b/web/server/views/sass/index.njk
@@ -20,21 +20,21 @@
 
 		<div class="grid">
 
-			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+			<div data-g="12 xs:6 sm:4 md:3">
 				<h4><a href="/sass/code-standards">Code standards</a></h4>
 				<p>
 					SASS code standards, naming conventions etc
 				</p>
 			</div>
 
-			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+			<div data-g="12 xs:6 sm:4 md:3">
 				<h4><a href="/sass/docs">Documentation</a></h4>
 				<p>
 					Auto-generated SASS documentation from our SASSDoc comments
 				</p>
 			</div>
 
-			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+			<div data-g="12 xs:6 sm:4 md:3">
 				<h4><a href="/sass/libraries">Libraries</a></h4>
 				<p>
 					The third party libraries we use
