--- a/web/server/views/style-guide/index.njk
+++ b/web/server/views/style-guide/index.njk
@@ -3,7 +3,7 @@
 {% set breadcrumbs = [{ title: title }] %}
 
 {% macro item(title, href, description) %}
-	<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+	<div data-g="12 xs:6 sm:4 md:3">
 		<h4><a href="{{ href }}">{{ title }}</a></h4>
 		<p>
 			{{ description }}
@@ -16,7 +16,7 @@
 	<div class="container">
 		<h1>NICE Style guide</h1>
 
-		<p class="lede">
+		<p class="lead">
 			This guide shows how to make your service look consistent with the rest of NICE.
 		</p>
 
